# gstpy

./: README.md  pyproject.toml
src/gstpy/: __init__.py  main.py
