[build-system]
requires = ["hatchling >= 1.26","tabulate"]
build-backend = "hatchling.build"

[project]
name = "gstpy"
version = "0.0.1"
authors = [
  { name="Ankush Dhingra", email="ankushkumar20024@gmail.com" },
]
description = "gstpy is a simple and flexible Python module that allows you to calculate GST (Goods and Services Tax) in both exclusive and inclusive modes. It provides the option to return results as raw values (ideal for developers) or display them in a formatted tabular output (perfect for CLI and reports)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"